[build-dependencies]
substrate-wasm-builder = { branch = "polkadot-v0.9.23", git = "https://github.com/paritytech/substrate" }

[dependencies]
frame-executive = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
orml-benchmarking = { branch = "polkadot-v0.9.23", default-features = false, optional = true, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-currencies = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-tokens = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-traits = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
pallet-balances = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-collective = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-democracy = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-identity = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-membership = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-multisig = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-preimage = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-proxy = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-scheduler = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-treasury = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-utility = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-vesting = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-api = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
substrate-fixed = { default-features = false, features = ["serde"], git = "https://github.com/encointer/substrate-fixed" }

# Try-Runtime

frame-try-runtime = { branch = "polkadot-v0.9.23", default-features = false, optional = true, git = "https://github.com/paritytech/substrate" }

# Benchmark

frame-benchmarking = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
frame-system-benchmarking = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }

# Cumulus

cumulus-pallet-dmp-queue = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-pallet-parachain-system = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-pallet-xcm = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-pallet-xcmp-queue = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-core = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-timestamp = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-utility = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
parachain-info = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }

# Parachain

nimbus-primitives = { branch = "moonbeam-polkadot-v0.9.23", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
pallet-author-inherent = { branch = "moonbeam-polkadot-v0.9.23", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
pallet-author-mapping = { tag = "v0.25.0", default-features = false, git = "https://github.com/purestake/moonbeam", optional = true }
pallet-author-slot-filter = { branch = "moonbeam-polkadot-v0.9.23", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
pallet-crowdloan-rewards = { branch = "moonbeam-polkadot-v0.9.23", default-features = false, git = "https://github.com/purestake/crowdloan-rewards", optional = true }
pallet-parachain-staking = { tag = "v0.25.0", default-features = false, git = "https://github.com/purestake/moonbeam", optional = true }
session-keys-primitives = { tag = "v0.25.0", default-features = false, git = "https://github.com/purestake/moonbeam", optional = true }

# Polkadot

pallet-xcm = { branch = "release-v0.9.23", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
polkadot-parachain = { branch = "release-v0.9.23", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm = { branch = "release-v0.9.23", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm-builder = { branch = "release-v0.9.23", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm-executor = { branch = "release-v0.9.23", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }

# Standalone

pallet-aura = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { branch = "polkadot-v0.9.23", default-features = false, git = "https://github.com/paritytech/substrate" }

# Utility
cfg-if = { version = "1.0.0" }
hex-literal = { default-features = false, optional = true, version = "0.3.4" }
log = { version = "0.4.17", default-features = false, optional = true }

# Zeitgeist

common-runtime = { default-features = false, path = "../common" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }
zrml-authorized = { default-features = false, path = "../../zrml/authorized" }
zrml-court = { default-features = false, path = "../../zrml/court" }
zrml-liquidity-mining = { default-features = false, path = "../../zrml/liquidity-mining" }
zrml-market-commons = { default-features = false, path = "../../zrml/market-commons" }
zrml-prediction-markets = { default-features = false, path = "../../zrml/prediction-markets" }
zrml-rikiddo = { default-features = false, path = "../../zrml/rikiddo" }
zrml-simple-disputes = { default-features = false, path = "../../zrml/simple-disputes" }
zrml-styx = { default-features = false, path = "../../zrml/styx" }
zrml-swaps = { default-features = false, path = "../../zrml/swaps" }
zrml-swaps-runtime-api = { default-features = false, path = "../../zrml/swaps/runtime-api" }

[dev-dependencies]
sp-io = { branch = "polkadot-v0.9.23", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
parachain = [
    # Cumulus

    "cumulus-pallet-dmp-queue",
    "cumulus-pallet-parachain-system",
    "cumulus-pallet-xcm",
    "cumulus-pallet-xcmp-queue",
    "cumulus-primitives-core",
    "cumulus-primitives-timestamp",
    "cumulus-primitives-utility",
    "parachain-info",

    # Parachain

    "nimbus-primitives",
    "pallet-author-inherent",
    "pallet-author-mapping",
    "pallet-author-slot-filter",
    "pallet-crowdloan-rewards",
    "pallet-parachain-staking",
    "session-keys-primitives",

    # Polkadot

    "pallet-xcm",
    "polkadot-parachain",
    "xcm-builder",
    "xcm-executor",
    "xcm",

    # Misc

    "common-runtime/parachain",
    "log",
]
runtime-benchmarks = [
    "cumulus-pallet-xcmp-queue?/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "orml-tokens/runtime-benchmarks",
    "orml-benchmarking",
    "pallet-author-inherent?/runtime-benchmarks",
    "pallet-author-mapping?/runtime-benchmarks",
    "pallet-author-slot-filter?/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-crowdloan-rewards?/runtime-benchmarks",
    "pallet-democracy/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-xcm?/runtime-benchmarks",
    "pallet-parachain-staking?/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "xcm-builder?/runtime-benchmarks",
    "zrml-authorized/runtime-benchmarks",
    "zrml-court/runtime-benchmarks",
    "zrml-liquidity-mining/runtime-benchmarks",
    "zrml-prediction-markets/runtime-benchmarks",
    "zrml-simple-disputes/runtime-benchmarks",
    "zrml-styx/runtime-benchmarks",
    "zrml-swaps/runtime-benchmarks",
]
std = [
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "hex-literal",
    "log/std",
    "orml-benchmarking/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-identity/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "pallet-randomness-collective-flip/std",
    "pallet-scheduler/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "pallet-vesting/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-fixed/std",

    # Try-Runtime
    "frame-try-runtime/std",

    # Benchmark

    "frame-benchmarking?/std",
    "frame-system-benchmarking?/std",

    # Cumulus

    "cumulus-pallet-dmp-queue?/std",
    "cumulus-pallet-parachain-system?/std",
    "cumulus-pallet-xcm?/std",
    "cumulus-pallet-xcmp-queue?/std",
    "cumulus-primitives-core?/std",
    "cumulus-primitives-timestamp?/std",
    "cumulus-primitives-utility?/std",
    "parachain-info?/std",

    # Parachain

    "nimbus-primitives?/std",
    "pallet-author-inherent?/std",
    "pallet-author-mapping?/std",
    "pallet-author-slot-filter?/std",
    "pallet-crowdloan-rewards?/std",
    "pallet-parachain-staking?/std",
    "session-keys-primitives?/std",

    # Polkadot

    "pallet-xcm?/std",
    "polkadot-parachain?/std",
    "xcm-builder?/std",
    "xcm-executor?/std",
    "xcm?/std",

    # Standalone

    "pallet-aura/std",
    "pallet-grandpa/std",
    "sp-consensus-aura/std",
    "sp-finality-grandpa/std",

    # Zeitgeist

    "zeitgeist-primitives/std",
    "zrml-authorized/std",
    "zrml-court/std",
    "zrml-liquidity-mining/std",
    "zrml-market-commons/std",
    "zrml-prediction-markets/std",
    "zrml-rikiddo/std",
    "zrml-simple-disputes/std",
    "zrml-swaps-runtime-api/std",
    "zrml-styx/std",
    "zrml-swaps/std",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-try-runtime",

    # For every pallet in the runtime include try-runtime

    # System runtime pallets
    "frame-system/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-randomness-collective-flip/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-preimage/try-runtime",

    # Money runtime pallets
    "pallet-balances/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-vesting/try-runtime",
    "pallet-multisig/try-runtime",

    # Governance runtime pallets
    "pallet-democracy/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-membership/try-runtime",

    # Other Parity runtime pallets
    "pallet-identity/try-runtime",
    "pallet-utility/try-runtime",

    # ORML runtime pallets
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",

    # Zeitgeist runtime pallets
    "zrml-authorized/try-runtime",
    "zrml-court/try-runtime",
    "zrml-liquidity-mining/try-runtime",
    "zrml-market-commons/try-runtime",
    "zrml-prediction-markets/try-runtime",
    "zrml-rikiddo/try-runtime",
    "zrml-simple-disputes/try-runtime",
    "zrml-styx/try-runtime",
    "zrml-swaps/try-runtime",

    # Parachain
    "pallet-author-mapping?/try-runtime",
    "pallet-author-slot-filter?/try-runtime",
    "pallet-parachain-staking?/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zeitgeist-runtime"
version = "0.3.5"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
