[dependencies]
frame-benchmarking = { branch = "moonbeam-polkadot-v0.9.11", default-features = false, optional = true, git = "https://github.com/purestake/substrate" }
frame-support = { branch = "moonbeam-polkadot-v0.9.11", default-features = false, git = "https://github.com/purestake/substrate" }
frame-system = { branch = "moonbeam-polkadot-v0.9.11", default-features = false, git = "https://github.com/purestake/substrate" }
parity-scale-codec = { default-features = false, features = ["derive"], version = "2.0" }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.11", default-features = false, git = "https://github.com/purestake/substrate" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
zrml-market-commons = { default-features = false, path = "../market-commons" }

[dev-dependencies]
pallet-balances = { branch = "moonbeam-polkadot-v0.9.11", git = "https://github.com/purestake/substrate" }
pallet-timestamp = { branch = "moonbeam-polkadot-v0.9.11", git = "https://github.com/purestake/substrate"}
sp-io = { branch = "moonbeam-polkadot-v0.9.11", git = "https://github.com/purestake/substrate" }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
std = [
    'frame-benchmarking?/std',
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    'sp-runtime/std',
    'zeitgeist-primitives/std',
    'zrml-market-commons/std'
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2018"
name = "zrml-authorized"
version = "0.2.3"
